# AquaMind

./: README.md  asset-manifest.json  index.html  pyproject.toml
data/: eda.html
dataset/: convert_to_json.py  dataset.csv  dataset_old.csv  in_polygon.py  make_csv_for_web.py  make_dataset.py  make_dataset_200.py  make_dataset_valid.py  overlap_percentage.py  qgis_point.csv  qgis_polygon.csv  tif_to_numpy.py
dataset/img_tif/: 1.tif  10.tif  100.tif  1000.tif  1001.tif  1002.tif  1003.tif  1004.tif  1005.tif  1006.tif  1007.tif  1008.tif  1009.tif  101.tif  1010.tif  1011.tif  1012.tif  1013.tif  1014.tif  1015.tif  1016.tif  1017.tif  1018.tif  1019.tif  102.tif  1020.tif  1021.tif  1022.tif  1023.tif  1024.tif  1025.tif  1026.tif  1027.tif  1028.tif  1029.tif  103.tif  1030.tif  1031.tif  1032.tif  1033.tif  (+7532 more)
dataset/polygon_point/: 1.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  16.csv  17.csv  18.csv  19.csv  2.csv  20.csv  21.csv  22.csv  23.csv  24.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
dataset/polygon_point_valid/: 1.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
docs/: dataset_sample.csv  index.html
front/: .env  package-lock.json  package.json
front/docs/: asset-manifest.json  index.html
front/public/: CNAME  index.html
front/src/: App.tsx
notebooks/: quick_start.ipynb
src/: check_output.py  validation_avg.py
src/components/: Header.tsx
src/features/: extract_from_img.py
src/models/: catboost.py  lightgbm.py  randomforest.py  tabpfn.py  xgboost.py
(+65 files in other folders)
