[tool.poetry]
name = "aquamind"
version = "0.1.0"
description = ""
authors = ["kohseim <kohseiseal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
numpy = "^1.26.4"
scipy = "^1.12.0"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
scikit-learn = "^1.4.1.post1"
jupyter = "^1.0.0"
ipython = "^8.21.0"
sweetviz = "^2.3.1"
lightgbm = "^4.3.0"
xgboost = "^2.0.3"
catboost = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
